# Galois

./: .gitignore
libgalois/include/galois/: AtomicWrapper.h  gIO.h
libgalois/include/galois/worklists/: AdaptiveObim.h
libgluon/include/galois/runtime/: SyncStructures.h
lonestar/experimental/: CMakeLists.txt
lonestar/experimental/fmm/: CMakeLists.txt  Mesh.h  fmm.cpp  fmm2d.cpp
lonestar/liblonestar/src/: BoilerPlate.cpp
lonestar/scientific/cpu/: CMakeLists.txt
lonestar/scientific/cpu/fastmarchingmethod/: CMakeLists.txt  README.md  boundary.cpp  fastmarchingmethod.h  fmm.cpp  fmm2d.cpp  fmm_array_todo.cpp  fmm_csr_grids_3d.cpp  fmm_regular_backup.cpp  fmm_structured.cpp  fmm_triangles_2d.cpp  grids_gen.cpp  irr_gen.py  speed_function.cpp
lonestar/scientific/cpu/fastmarchingmethod/google-segystack/: mmap_file.h  segy_file.cc  segy_file.h
lonestar/scientific/cpu/fastmarchingmethod/google-segystack/cutoff/: crs_util.h  stack_file.h
lonestar/scientific/cpu/fastmarchingmethod/numpy/: cnpy.cpp  cnpy.h
lonestar/scientific/cpu/fastmarchingmethod/segy/: SEG-YReader.h  a2e.h  csSegyReader.cc  csSegyReader.h  segy.h
lonestar/scientific/cpu/fastmarchingmethod/structured/: grids.h  utils.h
lonestar/scientific/cpu/fastmarchingmethod/unstructured/: Element.h  Mesh.h  Tuple.h  Verifier.h
lonestar/scientific/cpu/fastmarchingmethod/util/: CMakeLists.txt  grids_gen.cpp  input.hh  output.hh
lonestar/scientific/cpu/fastmarchingmethod/util/google-segystack/: segy_file.cc  segy_file.h
lonestar/scientific/cpu/fastmarchingmethod/util/google-segystack/cutoff/: logging.h
lonestar/scientific/cpu/fastmarchingmethod/util/numpy/: cnpy.cpp
lonestar/scientific/cpu/fastmarchingmethod/util/structured/: grids.h  utils.h
lonestar/scientific/distributed/: CMakeLists.txt
lonestar/scientific/distributed/fastmarchingmethod/: CMakeLists.txt  boundary.cpp  fastmarchingmethod.h  fmm_dist.bak  fmm_dist_pull.cpp  fmm_dist_push.cpp  fmm_dist_wl.cpp  grids.h  speed_function.cpp
lonestar/scientific/distributed/fastmarchingmethod/distributed/: DgIO.h  fmm_sync.h
lonestar/scientific/distributed/fastmarchingmethod/structured/: grids.h  utils.h
lonestar/scientific/distributed/fastmarchingmethod/unstructured/: Tuple.h
lonestar/scientific/distributed/fastmarchingmethod/util/: CMakeLists.txt  input.hh
lonestar/scientific/distributed/fastmarchingmethod/util/google-segystack/: float_util.h
lonestar/scientific/distributed/fastmarchingmethod/util/google-segystack/cutoff/test/: test_base.h
lonestar/scientific/distributed/fastmarchingmethod/util/numpy/: cnpy.h
